MFH: Fix bug #46020: With Sun Java System Web Server 7.0 on HPUX, #define HPUX